Refactoring NMEA data in to its own subclasses.

--- a/APaRSer.csproj
+++ b/APaRSer.csproj
@@ -34,6 +34,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Packet.NmeaData.cs" />
     <Compile Include="Position.cs" />
     <Compile Include="Packet.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
