--- a/APaRSerUnitTests/APaRSerUnitTests.csproj
+++ b/APaRSerUnitTests/APaRSerUnitTests.csproj
@@ -57,6 +57,7 @@
     <Compile Include="TimestampUnitTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PositionUnitTests.cs" />
+    <Compile Include="PacketNmeaDataUnitTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\APaRSer.csproj">
