--- a/src/APaRSer/APaRSer.csproj
+++ b/src/APaRSer/APaRSer.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="GeoCoordinate.NetStandard1" Version="1.0.1" />
+  </ItemGroup>
+
+  
 </Project>
