Removing APaRSer rename from this branch

--- a/src/APaRSer/APaRSer.csproj
+++ b/src/APaRSer/APaRSer.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{BCA572AC-AF0A-40B6-AD29-795841A65CE2}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AprsParser</RootNamespace>
-    <AssemblyName>AprsParser</AssemblyName>
+    <RootNamespace>APaRSer</RootNamespace>
+    <AssemblyName>APaRSer</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
