--- a/test/APaRSerUnitTests/APaRSerUnitTests.csproj
+++ b/test/APaRSerUnitTests/APaRSerUnitTests.csproj
@@ -6,9 +6,9 @@
     <ProjectGuid>{8BCF50EE-C4F7-45D0-9D1B-9018E8C33B05}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AprsParserUnitTests</RootNamespace>
-    <AssemblyName>AprsParserUnitTests</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <RootNamespace>APaRSerUnitTests</RootNamespace>
+    <AssemblyName>APaRSerUnitTests</AssemblyName>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
@@ -16,7 +16,6 @@
     <ReferencePath>$(ProgramFiles)\Common Files\microsoft shared\VSTT\$(VisualStudioVersion)\UITestExtensionPackages</ReferencePath>
     <IsCodedUITest>False</IsCodedUITest>
     <TestProjectType>UnitTest</TestProjectType>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -61,7 +60,7 @@
     <Compile Include="PacketNmeaDataUnitTests.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\AprsParser.csproj">
+    <ProjectReference Include="..\APaRSer.csproj">
       <Project>{bca572ac-af0a-40b6-ad29-795841a65ce2}</Project>
       <Name>APaRSer</Name>
     </ProjectReference>
