Fixed workflow name and added a path limit on PR for this action.

--- a/.github/workflows/markdown.yml
+++ b/.github/workflows/markdown.yml
@@ -1,4 +1,4 @@
-name: Lint
+name: Markdown
 
 on:
   push:
@@ -8,6 +8,8 @@ on:
   pull_request:
     branches:
       - main
+    paths:
+      - '**/*.md'
 
 jobs:
   lint:
