Kiss it renaming (#22)
* Updating .Netcoreapp2.0 to .Netcoreapp3.1

* Reverted unintentional change

* renaming KissIt project to KissTnc and namespaces

* renaming the kissit project

* Renaming of KissItProject and Namespaces

* Removing APaRSer rename from this branch

* Removed the extra blank line in KissProject

* removing commented line in src file

* Incorporated the changes

--- a/test/KissTncUnitTests/KissTncUnitTests.csproj
+++ b/test/KissTncUnitTests/KissTncUnitTests.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\KissIt\KissIt.csproj" />
+    <ProjectReference Include="..\..\src\KissTnc\KissTnc.csproj" />
   </ItemGroup>
 
 </Project>
