Aprs parser renaming (#31)
* Renaming of old APRS files to professional names

* Renaming of Aprs old files

* The modification of the namespace

--- a/test/AprsParserUnitTests/AprsParserUnitTests.csproj
+++ b/test/AprsParserUnitTests/AprsParserUnitTests.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\APaRSer\APaRSer.csproj" />
+    <ProjectReference Include="..\..\src\AprsParser\AprsParser.csproj" />
   </ItemGroup>
 
 </Project>
