Moving the ConsoleApplication to src directory

--- a/src/ConsoleApplication/ConsoleApplication.csproj
+++ b/src/ConsoleApplication/ConsoleApplication.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\AprsParser\AprsParser.csproj" />
+    <ProjectReference Include="..\AprsParser\AprsParser.csproj" />
   </ItemGroup>
 
 </Project>
