--- a/src/AprsIS/AprsIS.csproj
+++ b/src/AprsIS/AprsIS.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <RootNamespace>APRS_IS_Connection</RootNamespace>
+    <RootNamespace>AprsIS.Connections</RootNamespace>
   </PropertyGroup>
 
 </Project>
