--- a/src/ConsoleApplication/ConsoleApplication.csproj
+++ b/src/ConsoleApplication/ConsoleApplication.csproj
@@ -7,6 +7,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\AprsParser\AprsParser.csproj" />
+    <ProjectReference Include="..\AprsISLibrary\AprsISLibrary.csproj" />
   </ItemGroup>
+
 
 </Project>
