The initial APRSLib library (#41)
* The initial APRSLib library

* Modified version of the PR

--- a/src/ConsoleApplication/ConsoleApplication.csproj
+++ b/src/ConsoleApplication/ConsoleApplication.csproj
@@ -7,6 +7,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\AprsParser\AprsParser.csproj" />
+    <ProjectReference Include="..\AprsISLibrary\AprsIsConnection.csproj" />
   </ItemGroup>
+
 
 </Project>
