Decreased timeout on Actions to 5 minutes (#45)
* Decreased timeout on Actions to 5 minutes.

* Ensure actions always run when workflows change.

--- a/.github/workflows/markdown.yml
+++ b/.github/workflows/markdown.yml
@@ -10,11 +10,12 @@ on:
       - main
     paths:
       - '**/*.md'
+      - '.github/workflows/**'
 
 jobs:
   lint:
     name: Lint
-
+    timeout-minutes: 5
     runs-on: ubuntu-latest
 
     steps:
