--- a/src/KissTnc/KissTnc.csproj
+++ b/src/KissTnc/KissTnc.csproj
@@ -6,6 +6,10 @@
 
   <ItemGroup>
     <PackageReference Include="System.IO.Ports" Version="4.4.0" />
+    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.3.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
 </Project>
