--- a/src/APRSsharp/APRSsharp.csproj
+++ b/src/APRSsharp/APRSsharp.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <ProjectReference Include="..\AprsParser\AprsParser.csproj" />
     <ProjectReference Include="..\AprsIsClient\AprsIsClient.csproj" />
+    <ProjectReference Include="..\KissTnc\KissTnc.csproj" />
   </ItemGroup>
 
   <ItemGroup>
