Implement new delegate and handler, switch console app handler.

--- a/src/AprsIsConnection/AprsIsConnection.csproj
+++ b/src/AprsIsConnection/AprsIsConnection.csproj
@@ -1,5 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\AprsParser\AprsParser.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
