--- a/test/AprsIsUnitTests/AprsIsUnitTests.csproj
+++ b/test/AprsIsUnitTests/AprsIsUnitTests.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\AprsISLibrary\AprsISLibrary.csproj" />
+    <ProjectReference Include="..\..\src\AprsISLibrary\AprsIsConnection.csproj" />
   </ItemGroup>
 
 </Project>
