--- a/src/AprsParser/AprsParser.csproj
+++ b/src/AprsParser/AprsParser.csproj
@@ -2,6 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
+    <PackageId>AprsSharp.AprsParser</PackageId>
+    <Version>1.0.0-alpha.1.0.0</Version>
+    <Authors>Cameron Bielstein</Authors>
+    <Company>Cameron Bielstein</Company>
+    <Description>Library for encoding and decoding packets in the Automatic Packet Reporting System (APRS)</Description>
+    <PackageTags>ham radio;amateur radio;packet radio;radio;APRS;Automatic Packet Reporting System;</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
