--- a/src/AprsIsConnection/AprsIsConnection.csproj
+++ b/src/AprsIsConnection/AprsIsConnection.csproj
@@ -6,6 +6,12 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
+    <PackageId>AprsSharp.AprsIsConnection</PackageId>
+    <Version>1.0.0-alpha.1.0.0</Version>
+    <Authors>Cameron Bielstein</Authors>
+    <Company>Cameron Bielstein</Company>
+    <Description>Library for sending and receiving packets through the Automatic Packet Reporting System Internet Service (APRS-IS)</Description>
+    <PackageTags>ham radio;amateur radio;packet radio;radio;APRS;Automatic Packet Reporting System;Automatic Packet Reporting System Internet System;APRS-IS;</PackageTags>
   </PropertyGroup>
 
 </Project>
