--- a/src/AprsParser/AprsParser.csproj
+++ b/src/AprsParser/AprsParser.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <PackageId>AprsSharp.AprsParser</PackageId>
-    <Version>1.0.0-alpha.1.0.0</Version>
+    <Version>0.0.0</Version>
     <Authors>Cameron Bielstein</Authors>
     <Company>Cameron Bielstein</Company>
     <Description>Library for encoding and decoding packets in the Automatic Packet Reporting System (APRS)</Description>
