Consolidate reused package properties.

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -5,6 +5,9 @@
     <NullableReferenceTypes>true</NullableReferenceTypes>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <CodeAnalysisRuleSet>$(MSBuildThisFileDirectory)\analyzers.ruleset</CodeAnalysisRuleSet>
+    <Version>0.1.0</Version>
+    <Authors>Cameron Bielstein</Authors>
+    <Company>Cameron Bielstein</Company>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration.ToLower())' == 'release'">
