Create AprsSharp.AprsParser and AprsSharp.AprsIsClient Nuget Packages (#111)
This PR adds the relevant code, documentation, and a new GitHub Action to track two new nuget packages:

* AprsSharp.AprsParser
* AprsSharp.AprsIsClient (our AprsIsConnection library, to be renamed in the future)

This will allow reuse of this code by other code bases and users.

For now, the packages will all have the same version and will change together. They will also be versioned 0.x.y (version 0) until a future date where the public classes and methods can be stabilized.

--- a/src/AprsParser/AprsParser.csproj
+++ b/src/AprsParser/AprsParser.csproj
@@ -2,6 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
+    <PackageId>AprsSharp.AprsParser</PackageId>
+    <Description>Library for encoding and decoding packets in the Automatic Packet Reporting System (APRS)</Description>
+    <PackageTags>ham radio;amateur radio;packet radio;radio;APRS;Automatic Packet Reporting System;</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
