--- a/src/AprsIsConnection/AprsIsConnection.csproj
+++ b/src/AprsIsConnection/AprsIsConnection.csproj
@@ -6,6 +6,9 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
+    <PackageId>AprsSharp.AprsIsClient</PackageId>
+    <Description>Library for sending and receiving packets through the Automatic Packet Reporting System Internet Service (APRS-IS)</Description>
+    <PackageTags>ham radio;amateur radio;packet radio;radio;APRS;Automatic Packet Reporting System;Automatic Packet Reporting System Internet System;APRS-IS;</PackageTags>
   </PropertyGroup>
 
 </Project>
