--- a/test/AprsIsConnectionUnitTests/AprsIsConnectionUnitTests.csproj
+++ b/test/AprsIsConnectionUnitTests/AprsIsConnectionUnitTests.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
     <PackageReference Include="Moq" Version="4.14.6" />
     <PackageReference Include="xunit" Version="2.4.0" />
