Added additional nuget package properties (#121)
Adding additional package properties to add information to the package Nuget.org listings.

These come from the [Microsoft package authoring best practices](https://docs.microsoft.com/en-us/nuget/create-packages/package-authoring-best-practices).

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -8,6 +8,11 @@
     <Version>0.1.1</Version>
     <Authors>Cameron Bielstein</Authors>
     <Company>Cameron Bielstein</Company>
+    <PackageProjectUrl>https://github.com/CBielstein/APRSsharp</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/CBielstein/APRSsharp</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <Copyright>Copyright (c) Cameron Bielstein 2020</Copyright>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration.ToLower())' == 'release'">
