--- a/test/AprsIsClientUnitTests/AprsIsClientUnitTests.csproj
+++ b/test/AprsIsClientUnitTests/AprsIsClientUnitTests.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\AprsIsClient\AprsIsClient.csproj" />
+    <ProjectReference Include="..\..\src\Shared\Shared.csproj" />
   </ItemGroup>
 
 </Project>
