--- a/src/APRSsharp/Properties/launchSettings.json
+++ b/src/APRSsharp/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "APRSsharp": {
       "commandName": "Project",
-      "commandLineArgs": "--mode TCPTNC --server localhost --port 8001 --callsign KG5GHQ",
+      "commandLineArgs": "--mode TCPTNC --server localhost --port 8001",
       "nativeDebugging": true
     }
   }
